tests/errors/illegal_returns.err
resolver error: variable of type 'void' is not allowed
 ==> ./tests/errors/illegal_returns.tau:1:2
1 |#a:= main();
  | ^ for this variable
  |         ^^ illegal type deduced from this initializer expression

resolver error: orphaned return statement
 ==> ./tests/errors/illegal_returns.tau:2:5
2 |b:= return 3;
  |    ^^^^^^^^ the return statement is not inside a function

resolver error: return type missmatch
 ==> ./tests/errors/illegal_returns.tau:4:12
3 |public func main(){
  |^^^^^^^^^^^^^^^^ target expects 'void'
4 |    return 3;
  |           ^ trying to return 'int'
